Bug 254005 - [Books] Horizontal ‘kcal’ (looking like Tate-Chu-Yoko) on vertical text is not horizontally centered
Summary: [Books] Horizontal ‘kcal’ (looking like Tate-Chu-Yoko) on vertical text is no...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Layout and Rendering (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: zalan
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-03-15 20:56 PDT by zalan
Modified: 2023-03-16 07:16 PDT (History)
4 users (show)

See Also:


Attachments
[fast-cq]Patch (4.69 KB, patch)
2023-03-15 21:03 PDT, zalan
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description zalan 2023-03-15 20:56:46 PDT
<rdar://104669685>
Comment 1 zalan 2023-03-15 21:03:25 PDT
Created attachment 465456 [details]
[fast-cq]Patch
Comment 2 EWS 2023-03-16 07:16:29 PDT
Committed 261744@main (f6309f09024f): <https://commits.webkit.org/261744@main>

All reviewed patches have been landed. Closing bug and clearing flags on attachment 465456 [details].