Cherry-pick f6309f09024f. rdar://problem/104669685

[Books] Horizontal ‘kcal’ (looking like Tate-Chu-Yoko) on vertical text is not horizontally centered
    https://bugs.webkit.org/show_bug.cgi?id=254005
    <rdar://104669685>

    Reviewed by Antti Koivisto.

    Replaced element (e.g. ing) with "display: inline-block" should behave like an inline-block (i.e. we should not assume that RenderReplaced renderer always represents a non-atomic box).

    * LayoutTests/fast/inline-block/inline-block-replaced-and-vertical-writing-mode-expected.html: Added.
    * LayoutTests/fast/inline-block/inline-block-replaced-and-vertical-writing-mode.html: Added.
    * Source/WebCore/layout/integration/inline/LayoutIntegrationLineLayout.cpp:
    (WebCore::LayoutIntegration::LineLayout::updateLayoutBoxDimensions):

    Canonical link: https://commits.webkit.org/261744@main

Identifier: 259548.455@safari-7615-branch